Fixed syntax errors & spacing

--- a/styles/homestyle.css
+++ b/styles/homestyle.css
@@ -6,7 +6,7 @@ p {
   line-height: 2;
 }
 
-.about, .fun {
+.about, .background, .fun {
   margin-bottom: 20%;
 }
 
